# ReTracker

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  environment.yaml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
configs/: paths.yaml  paths_local.yaml.example
configs/eval/: default_config_eval.yaml  eval_dynamic_replica.yaml  eval_tapvid_davis_first.yaml  eval_tapvid_davis_strided.yaml  eval_tapvid_kinetics_first.yaml  eval_tapvid_retrack_first.yaml  eval_tapvid_robotap_first.yaml  eval_tapvid_stacking_first.yaml
configs/model/: retracker.yaml
configs/train/: stage4_unified.yaml  trainer_default.yaml
configs/train/debug/: matching_megadepth.yaml  stage4_debug.yaml
configs/train/smoke/: stage4_dummy.yaml
docs/: DATASETS.md  MODEL_ZOO.md  ROADMAP.md  STRUCTURE.md
experiments/: README.md  __init__.py
experiments/benchmark/: README.md  __init__.py  benchmark.py  generate_grid_queries.py
experiments/benchmark/core/: __init__.py  conda.py  mosaic.py  queries.py  types.py  video.py  vis.py
experiments/benchmark/runners/: common.py  cotracker3_offline_runner.py  cotracker3_online_runner.py  retracker_runner.py  tapir_runner.py  tapnext_runner.py  trackon2_runner.py
experiments/benchmark/scripts/: build_jitprofiling_stub.sh  install_third_party.sh  jitprofiling_stub.c  setup_envs.sh  smoke_test.sh
experiments/benchmark/trackers/: __init__.py  base.py  cotracker3.py  external_runner.py  retracker.py  tapir.py  tapnext.py  trackon2.py
experiments/eval_benchmark/: README.md  __init__.py  run_tapvid_davis_first.py  run_tapvid_davis_first_suite.py  run_tapvid_retrack_first_suite.py
experiments/eval_benchmark/core/: __init__.py  io.py  metrics.py
experiments/eval_benchmark/datasets/: __init__.py  tapvid_davis.py
experiments/eval_benchmark/methods/: __init__.py  base.py  retracker.py
experiments/eval_benchmark/scripts/: smoke_test_davis_first.sh
experiments/eval_benchmark/suite/: __init__.py  cache.py
experiments/evaluation/: README.md
experiments/tools/: .gitignore  README.md
experiments/training/: README.md
retracker/: __init__.py  __main__.py  config_utils.py  version.py
retracker/apps/: README.md  __init__.py  interactive_streaming.py  multiview_tracking.py  multiview_triangulation.py  pair_matching.py  tracking_streaming.py  tracking_video.py
retracker/apps/assets/: .gitignore  README.md
retracker/apps/components/: __init__.py  detection.py  segmentation.py
retracker/apps/config/: __init__.py  base_config.py  presets.py  streaming_config.py  streaming_fast_config.py
retracker/apps/configs/: example.yaml  high_quality.yaml  streaming_camera.yaml  streaming_fast.yaml  streaming_high_quality.yaml  streaming_video.yaml  tracking_fast.yaml
retracker/apps/multiview/: __init__.py  config.py  multiview_tracker.py  triangulation_pipeline.py
retracker/apps/runtime/: __init__.py  interactive_streaming_pipeline.py  pipeline.py  query_generator.py  streaming_pipeline.py  streaming_source.py  tracker.py  video_loader.py
retracker/apps/utils/: __init__.py  geometry.py  video_utils.py
retracker/cli/: __init__.py  apps.py  eval.py  main.py  train.py
retracker/configs/: default_retracker_config.yaml
retracker/data/: __init__.py  video_sequences.py
retracker/data/datasets/: Megadepth.py  __init__.py  cotracker_movie.py  dummy_tracking.py  flyingthings.py  io.py  kubric_movie.py  kubric_movif_dataset.py  movi_e.py  pointodyssey.py  sampler.py  tap_vid_datasets.py  utils.py
retracker/evaluation/: aggregate.py  cli.py  metrics.py  publicevaluator.py
retracker/inference/: __init__.py  engine.py
retracker/inference/engines/: __init__.py  offline.py  streaming.py  streaming_multi_gpu.py
retracker/io/: __init__.py  images.py  results.py
retracker/models/: __init__.py  config.py  retracker.py  retrackerbase.py
retracker/models/backbone/: __init__.py  dino_backbone.py  dino_backbone_v0.py  dino_backbone_v3.py  dinov2.py  resnet_fpn.py
retracker/models/modules/: __init__.py  coarse_matching.py  linear_attention.py  pips_refinement.py  queries_attn.py  roma_decoder.py  temporal_attn.py  temporal_fusion.py  torch_compat.py  transformer.py
retracker/models/utils/: dino_encoder.py  geo_helper.py  (+7 more)
retracker/training/: __init__.py  callbacks.py  cli.py  ema.py  geometry.py  lightning_helper.py  lightning_module.py  misc.py  optim.py  profiler.py  supervision.py  unified_data_module.py
retracker/utils/: checkpoint.py  device.py  profiler.py  rich_utils.py
retracker/visualization/: __init__.py  visualizer.py
scripts/: debug_matching.py  test_triangulation_setup.py
scripts/apps/: multiview_track_pcl_4d.sh  multiview_tracking.sh  multiview_triangulation.sh  pair_matching_pipe_organ.sh  tracking_streaming.sh  tracking_streaming_ui.sh  tracking_video.sh
scripts/evaluation/: README.md  common_eval.sh  eval_benchmark_davis_first_suite.sh  kttr_davis_first.sh  kttr_kinetics_first.sh  kttr_retrack_first.sh  kttr_rgbstacking_first.sh  kttr_robotap_first.sh  retracker_davis_first.sh  retracker_davis_first_multigpu.sh
scripts/smoke/: streaming_image_sequence_pipe_organ.sh  streaming_video_brush4.sh  streaming_video_brush4_global.sh  train_stage4_dummy.sh
scripts/tools/: git_check.sh  video_to_images.py
scripts/train/: README.md  train.sh
tests/: README.md  test_cli_wrappers.py  test_cycle_consistency_warp.py  test_dinov3_fast_start_no_pretrained_weights.py  test_eval_aggregate.py  test_evaluation_scripts_dry_run.py  test_import_lightweight.py  test_inference_checkpoint_map_location.py  test_inference_engine_split.py  test_megadepth_dataset_pickle_npz.py  test_merge_retracker_config_file.py  test_model_config_file_exists.py  test_modules_import.py  test_no_private_paths_in_eval_cli.py  test_offline_engine_no_duplicate_methods.py  test_offline_engine_video_forward_shapes.py  test_packaged_default_config.py  test_pyproject_dependencies.py  test_slam_tracklets.py  test_training_task_routing.py
(+28 files in other folders)
